--- a/index.html
+++ b/index.html
@@ -1,18 +1,103 @@
 <!doctype html>
-<html lang="hr">
-  <head>
-    <meta charset="UTF-8" />
-    <title>TBW AI PREMIUM NAVIGATOR</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
-    />
-    <meta name="theme-color" content="#020617" />
-    <link rel="icon" type="image/png" href="/tbw-logo-192.png" />
-    <link rel="manifest" href="/manifest.json" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>TBW AI PREMIUM NAVIGATOR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="theme-color" content="#0b2f24" />
+  <link rel="stylesheet" href="/style.css" />
+</head>
+
+<body>
+
+<!-- INTRO -->
+<div id="intro">
+  <video autoplay muted playsinline>
+    <source src="/intro.mp4" type="video/mp4">
+  </video>
+  <div class="intro-overlay">
+    <h1>TBW AI PREMIUM</h1>
+    <button onclick="closeIntro()">ENTER</button>
+  </div>
+</div>
+
+<!-- APP -->
+<div id="app">
+
+  <!-- HEADER -->
+  <header class="top">
+    <div class="logo">TBW AI <span>PREMIUM</span></div>
+    <div class="status">LIVE ● GPS OK</div>
+  </header>
+
+  <!-- TICKER -->
+  <div class="ticker">
+    <div class="ticker-move">
+      Traffic • Weather • Safety alerts • Events • Airports • TBW AI LIVE •
+      Traffic • Weather • Safety alerts • Events • Airports • TBW AI LIVE •
+    </div>
+  </div>
+
+  <!-- HERO -->
+  <section class="hero">
+    <div class="hero-content">
+      <h2>Paris</h2>
+      <p>Eiffel Tower · Champ de Mars</p>
+      <div class="hero-actions">
+        <button class="primary">NAVIGATE</button>
+        <button>STREET VIEW</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- SEARCH (FIXED) -->
+  <section class="search">
+    <input type="text" placeholder="Search destination…" />
+    <button>GO</button>
+  </section>
+
+  <!-- WINDOWS -->
+  <main class="windows">
+
+    <div class="card">
+      <h3>AI Concierge</h3>
+      <p>Voice, guidance, assistance</p>
+    </div>
+
+    <div class="card">
+      <h3>Booking</h3>
+      <p>Hotels · Apartments · Cars</p>
+    </div>
+
+    <div class="card">
+      <h3>Weather</h3>
+      <p>+19°C · Wind 10 km/h</p>
+    </div>
+
+    <div class="card">
+      <h3>Traffic & Safety</h3>
+      <p>Incidents · Cameras · Alerts</p>
+    </div>
+
+    <div class="card">
+      <h3>Transport</h3>
+      <p>Taxi · Train · Flight</p>
+    </div>
+
+    <div class="card">
+      <h3>Child Mode</h3>
+      <p>Safety monitoring active</p>
+    </div>
+
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    TBW AI PREMIUM Navigator · informational tool only
+  </footer>
+
+</div>
+
+<script src="/app.js"></script>
+</body>
 </html>
