--- a/index.html
+++ b/index.html
@@ -1,11 +1,107 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>TBW AI PREMIUM NAVIGATOR</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="theme-color" content="#0b2f24" />
-  <link rel="stylesheet" href="/style.css" />
+<meta charset="UTF-8">
+<title>TBW AI PREMIUM NAVIGATOR</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<meta name="theme-color" content="#0b2f24">
+
+<style>
+/* ===== RESET ===== */
+*{box-sizing:border-box;margin:0;padding:0;font-family:system-ui,-apple-system,BlinkMacSystemFont}
+body{background:#071a14;color:#eafff6}
+
+/* ===== INTRO ===== */
+#intro{
+  position:fixed;inset:0;z-index:9999;background:black
+}
+#intro video{
+  width:100%;height:100%;object-fit:cover
+}
+#intro .overlay{
+  position:absolute;inset:0;
+  display:flex;flex-direction:column;
+  align-items:center;justify-content:center;
+  background:radial-gradient(circle,transparent,rgba(0,0,0,.85))
+}
+#intro h1{font-size:2rem;margin-bottom:20px}
+#intro button{
+  padding:14px 32px;border-radius:30px;
+  border:none;background:#20d97c;
+  color:black;font-weight:700;font-size:16px
+}
+
+/* ===== HEADER ===== */
+header{
+  display:flex;justify-content:space-between;
+  padding:14px 18px;background:#071a14;
+  position:sticky;top:0;z-index:50
+}
+.logo span{color:#20d97c}
+
+/* ===== TICKER ===== */
+.ticker{
+  overflow:hidden;background:rgba(0,0,0,.35)
+}
+.ticker span{
+  display:inline-block;white-space:nowrap;
+  padding:10px 0;
+  animation:ticker 22s linear infinite
+}
+@keyframes ticker{
+  from{transform:translateX(0)}
+  to{transform:translateX(-50%)}
+}
+
+/* ===== HERO ===== */
+.hero{
+  height:45vh;
+  background:
+    linear-gradient(transparent,rgba(0,0,0,.85)),
+    url("https://images.unsplash.com/photo-1502602898657-3e91760cbb34");
+  background-size:cover;background-position:center;
+  display:flex;align-items:flex-end
+}
+.hero .content{padding:18px}
+.hero h2{font-size:28px}
+.hero p{opacity:.8;margin-bottom:12px}
+.hero button{
+  padding:10px 20px;border-radius:22px;
+  border:none;background:#20d97c;color:black;font-weight:700
+}
+
+/* ===== SEARCH ===== */
+.search{
+  position:sticky;top:64px;
+  display:flex;gap:10px;
+  padding:14px;background:#071a14;z-index:40
+}
+.search input{
+  flex:1;padding:12px;border-radius:14px;border:none
+}
+.search button{
+  padding:12px 18px;border-radius:14px;
+  border:none;background:#20d97c;font-weight:700
+}
+
+/* ===== WINDOWS ===== */
+main{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
+  gap:14px;padding:18px
+}
+.card{
+  background:rgba(255,255,255,.06);
+  border-radius:18px;padding:16px
+}
+.card h3{margin-bottom:6px}
+
+/* ===== FOOTER ===== */
+footer{
+  text-align:center;padding:18px;
+  opacity:.6;font-size:13px
+}
+</style>
 </head>
 
 <body>
@@ -13,91 +109,57 @@
 <!-- INTRO -->
 <div id="intro">
   <video autoplay muted playsinline>
-    <source src="/intro.mp4" type="video/mp4">
+    <source src="intro.mp4" type="video/mp4">
   </video>
-  <div class="intro-overlay">
+  <div class="overlay">
     <h1>TBW AI PREMIUM</h1>
     <button onclick="closeIntro()">ENTER</button>
   </div>
 </div>
 
-<!-- APP -->
-<div id="app">
+<header>
+  <div class="logo">TBW AI <span>PREMIUM</span></div>
+  <div>LIVE ● GPS OK</div>
+</header>
 
-  <!-- HEADER -->
-  <header class="top">
-    <div class="logo">TBW AI <span>PREMIUM</span></div>
-    <div class="status">LIVE ● GPS OK</div>
-  </header>
-
-  <!-- TICKER -->
-  <div class="ticker">
-    <div class="ticker-move">
-      Traffic • Weather • Safety alerts • Events • Airports • TBW AI LIVE •
-      Traffic • Weather • Safety alerts • Events • Airports • TBW AI LIVE •
-    </div>
-  </div>
-
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Paris</h2>
-      <p>Eiffel Tower · Champ de Mars</p>
-      <div class="hero-actions">
-        <button class="primary">NAVIGATE</button>
-        <button>STREET VIEW</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- SEARCH (FIXED) -->
-  <section class="search">
-    <input type="text" placeholder="Search destination…" />
-    <button>GO</button>
-  </section>
-
-  <!-- WINDOWS -->
-  <main class="windows">
-
-    <div class="card">
-      <h3>AI Concierge</h3>
-      <p>Voice, guidance, assistance</p>
-    </div>
-
-    <div class="card">
-      <h3>Booking</h3>
-      <p>Hotels · Apartments · Cars</p>
-    </div>
-
-    <div class="card">
-      <h3>Weather</h3>
-      <p>+19°C · Wind 10 km/h</p>
-    </div>
-
-    <div class="card">
-      <h3>Traffic & Safety</h3>
-      <p>Incidents · Cameras · Alerts</p>
-    </div>
-
-    <div class="card">
-      <h3>Transport</h3>
-      <p>Taxi · Train · Flight</p>
-    </div>
-
-    <div class="card">
-      <h3>Child Mode</h3>
-      <p>Safety monitoring active</p>
-    </div>
-
-  </main>
-
-  <!-- FOOTER -->
-  <footer>
-    TBW AI PREMIUM Navigator · informational tool only
-  </footer>
-
+<div class="ticker">
+  <span>
+    Traffic • Weather • Safety • Events • Airports • TBW AI LIVE •
+    Traffic • Weather • Safety • Events • Airports • TBW AI LIVE •
+  </span>
 </div>
 
-<script src="/app.js"></script>
+<section class="hero">
+  <div class="content">
+    <h2>Paris</h2>
+    <p>Eiffel Tower · Champ de Mars</p>
+    <button>NAVIGATE</button>
+  </div>
+</section>
+
+<section class="search">
+  <input placeholder="Ask TBW AI…" />
+  <button>GO</button>
+</section>
+
+<main>
+  <div class="card"><h3>Navigation</h3><p>AI guided routing</p></div>
+  <div class="card"><h3>Booking</h3><p>Hotels · Apartments</p></div>
+  <div class="card"><h3>Weather</h3><p>Live conditions</p></div>
+  <div class="card"><h3>Traffic</h3><p>Incidents & alerts</p></div>
+  <div class="card"><h3>Transport</h3><p>Taxi · Train · Flight</p></div>
+  <div class="card"><h3>Child Mode</h3><p>Safety monitoring</p></div>
+</main>
+
+<footer>
+  TBW AI PREMIUM Navigator · Informational tool only · All rights reserved
+</footer>
+
+<script>
+function closeIntro(){
+  document.getElementById("intro").style.display="none";
+}
+</script>
+
 </body>
 </html>
