--- a/index.html
+++ b/index.html
@@ -1,164 +1,166 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>TBW AI PREMIUM NAVIGATOR</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-<meta name="theme-color" content="#0b2f24">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>TBW AI PREMIUM</title>
 
 <style>
-/* ===== RESET ===== */
-*{box-sizing:border-box;margin:0;padding:0;font-family:system-ui,-apple-system,BlinkMacSystemFont}
-body{background:#071a14;color:#eafff6}
+* { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
 
-/* ===== INTRO ===== */
-#intro{
-  position:fixed;inset:0;z-index:9999;background:black
-}
-#intro video{
-  width:100%;height:100%;object-fit:cover
-}
-#intro .overlay{
-  position:absolute;inset:0;
-  display:flex;flex-direction:column;
-  align-items:center;justify-content:center;
-  background:radial-gradient(circle,transparent,rgba(0,0,0,.85))
-}
-#intro h1{font-size:2rem;margin-bottom:20px}
-#intro button{
-  padding:14px 32px;border-radius:30px;
-  border:none;background:#20d97c;
-  color:black;font-weight:700;font-size:16px
+body {
+  background: radial-gradient(circle at top, #0b3b2f, #000);
+  color: #fff;
 }
 
-/* ===== HEADER ===== */
-header{
-  display:flex;justify-content:space-between;
-  padding:14px 18px;background:#071a14;
-  position:sticky;top:0;z-index:50
-}
-.logo span{color:#20d97c}
-
-/* ===== TICKER ===== */
-.ticker{
-  overflow:hidden;background:rgba(0,0,0,.35)
-}
-.ticker span{
-  display:inline-block;white-space:nowrap;
-  padding:10px 0;
-  animation:ticker 22s linear infinite
-}
-@keyframes ticker{
-  from{transform:translateX(0)}
-  to{transform:translateX(-50%)}
+/* INTRO */
+#intro {
+  position: fixed;
+  inset: 0;
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
 }
 
-/* ===== HERO ===== */
-.hero{
-  height:45vh;
-  background:
-    linear-gradient(transparent,rgba(0,0,0,.85)),
-    url("https://images.unsplash.com/photo-1502602898657-3e91760cbb34");
-  background-size:cover;background-position:center;
-  display:flex;align-items:flex-end
-}
-.hero .content{padding:18px}
-.hero h2{font-size:28px}
-.hero p{opacity:.8;margin-bottom:12px}
-.hero button{
-  padding:10px 20px;border-radius:22px;
-  border:none;background:#20d97c;color:black;font-weight:700
+#intro h1 {
+  color: #00ff9c;
+  font-size: 32px;
+  animation: fade 3s forwards;
 }
 
-/* ===== SEARCH ===== */
-.search{
-  position:sticky;top:64px;
-  display:flex;gap:10px;
-  padding:14px;background:#071a14;z-index:40
-}
-.search input{
-  flex:1;padding:12px;border-radius:14px;border:none
-}
-.search button{
-  padding:12px 18px;border-radius:14px;
-  border:none;background:#20d97c;font-weight:700
+@keyframes fade {
+  0% {opacity:0}
+  20% {opacity:1}
+  80% {opacity:1}
+  100% {opacity:0}
 }
 
-/* ===== WINDOWS ===== */
-main{
+/* HEADER */
+header {
+  padding: 14px;
+  display: flex;
+  justify-content: space-between;
+  background: rgba(0,0,0,.4);
+  border-bottom: 1px solid #00ff9c33;
+}
+
+header span { color:#00ff9c }
+
+/* TICKER */
+#ticker {
+  padding: 8px;
+  background: #001f16;
+  font-size: 13px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+#ticker div {
+  display: inline-block;
+  animation: scroll 20s linear infinite;
+}
+@keyframes scroll {
+  from {transform:translateX(100%)}
+  to {transform:translateX(-100%)}
+}
+
+/* HERO */
+.hero {
+  padding: 20px;
+}
+.hero h1 { font-size: 32px; margin-bottom: 6px }
+.hero p { opacity:.8 }
+
+.hero button {
+  margin-top: 12px;
+  background:#00ff9c;
+  border:none;
+  padding:12px 26px;
+  border-radius:30px;
+  font-weight:bold;
+}
+
+/* SEARCH */
+.search {
+  display:flex;
+  padding: 20px;
+  gap:10px;
+}
+.search input {
+  flex:1;
+  padding:14px;
+  border-radius:12px;
+  border:none;
+}
+.search button {
+  background:#00ff9c;
+  border:none;
+  padding:14px 20px;
+  border-radius:12px;
+}
+
+/* CARDS */
+.cards {
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-  gap:14px;padding:18px
+  grid-template-columns: 1fr 1fr;
+  gap:16px;
+  padding:20px;
 }
-.card{
-  background:rgba(255,255,255,.06);
-  border-radius:18px;padding:16px
+.card {
+  background: rgba(0,0,0,.45);
+  border-radius:16px;
+  padding:20px;
+  border:1px solid #00ff9c33;
 }
-.card h3{margin-bottom:6px}
+.card h3 { margin-bottom:6px; color:#00ff9c }
 
-/* ===== FOOTER ===== */
-footer{
-  text-align:center;padding:18px;
-  opacity:.6;font-size:13px
+footer {
+  text-align:center;
+  font-size:12px;
+  opacity:.6;
+  padding:20px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- INTRO -->
-<div id="intro">
-  <video autoplay muted playsinline>
-    <source src="intro.mp4" type="video/mp4">
-  </video>
-  <div class="overlay">
-    <h1>TBW AI PREMIUM</h1>
-    <button onclick="closeIntro()">ENTER</button>
-  </div>
-</div>
+<div id="intro"><h1>TBW AI PREMIUM</h1></div>
 
 <header>
-  <div class="logo">TBW AI <span>PREMIUM</span></div>
-  <div>LIVE ● GPS OK</div>
+  <strong>TBW AI <span>PREMIUM</span></strong>
+  <span>LIVE ● GPS OK</span>
 </header>
 
-<div class="ticker">
-  <span>
-    Traffic • Weather • Safety • Events • Airports • TBW AI LIVE •
-    Traffic • Weather • Safety • Events • Airports • TBW AI LIVE •
-  </span>
+<div id="ticker">
+  <div>LIVE • Traffic • Weather • Safety • Events • Airports • TBW AI Engine active</div>
 </div>
 
 <section class="hero">
-  <div class="content">
-    <h2>Paris</h2>
-    <p>Eiffel Tower · Champ de Mars</p>
-    <button>NAVIGATE</button>
-  </div>
+  <h1>Paris</h1>
+  <p>Eiffel Tower · Champ de Mars</p>
+  <button>NAVIGATE</button>
 </section>
 
-<section class="search">
-  <input placeholder="Ask TBW AI…" />
+<div class="search">
+  <input placeholder="Ask TBW AI..." />
   <button>GO</button>
-</section>
+</div>
 
-<main>
+<section class="cards">
   <div class="card"><h3>Navigation</h3><p>AI guided routing</p></div>
   <div class="card"><h3>Booking</h3><p>Hotels · Apartments</p></div>
   <div class="card"><h3>Weather</h3><p>Live conditions</p></div>
   <div class="card"><h3>Traffic</h3><p>Incidents & alerts</p></div>
-  <div class="card"><h3>Transport</h3><p>Taxi · Train · Flight</p></div>
-  <div class="card"><h3>Child Mode</h3><p>Safety monitoring</p></div>
-</main>
+</section>
 
 <footer>
-  TBW AI PREMIUM Navigator · Informational tool only · All rights reserved
+TBW AI PREMIUM NAVIGATOR · Informational tool only
 </footer>
 
 <script>
-function closeIntro(){
-  document.getElementById("intro").style.display="none";
-}
+setTimeout(()=>document.getElementById("intro").remove(),3000);
 </script>
 
 </body>
