--- a/index.html
+++ b/index.html
@@ -1,125 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TBW AI PREMIUM</title>
 
 <style>
-* { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
+*{margin:0;padding:0;box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto}
 
-body {
-  background: radial-gradient(circle at top, #0b3b2f, #000);
-  color: #fff;
+body{
+background:#050b0a;
+color:#fff;
+overflow-x:hidden;
 }
 
 /* INTRO */
-#intro {
-  position: fixed;
-  inset: 0;
-  background: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 9999;
+#intro{
+position:fixed;
+inset:0;
+background:black;
+display:flex;
+align-items:center;
+justify-content:center;
+z-index:9999;
+animation:introFade 3.5s forwards;
 }
 
-#intro h1 {
-  color: #00ff9c;
-  font-size: 32px;
-  animation: fade 3s forwards;
+#intro h1{
+font-size:34px;
+letter-spacing:2px;
+color:#00ff9c;
 }
 
-@keyframes fade {
-  0% {opacity:0}
-  20% {opacity:1}
-  80% {opacity:1}
-  100% {opacity:0}
+@keyframes introFade{
+0%{opacity:0}
+15%{opacity:1}
+70%{opacity:1}
+100%{opacity:0;visibility:hidden}
 }
 
 /* HEADER */
-header {
-  padding: 14px;
-  display: flex;
-  justify-content: space-between;
-  background: rgba(0,0,0,.4);
-  border-bottom: 1px solid #00ff9c33;
+header{
+position:fixed;
+top:0;
+left:0;
+right:0;
+height:56px;
+display:flex;
+justify-content:space-between;
+align-items:center;
+padding:0 16px;
+background:linear-gradient(to right,#062e23,#02150f);
+z-index:10;
 }
 
-header span { color:#00ff9c }
+header span{color:#00ff9c;font-weight:600}
 
 /* TICKER */
-#ticker {
-  padding: 8px;
-  background: #001f16;
-  font-size: 13px;
-  white-space: nowrap;
-  overflow: hidden;
-}
-#ticker div {
-  display: inline-block;
-  animation: scroll 20s linear infinite;
-}
-@keyframes scroll {
-  from {transform:translateX(100%)}
-  to {transform:translateX(-100%)}
+#ticker{
+margin-top:56px;
+height:34px;
+background:#031b14;
+overflow:hidden;
+white-space:nowrap;
+display:flex;
+align-items:center;
 }
 
-/* HERO */
-.hero {
-  padding: 20px;
+#ticker div{
+padding-left:100%;
+animation:ticker 18s linear infinite;
+font-size:13px;
+color:#9fffe0;
 }
-.hero h1 { font-size: 32px; margin-bottom: 6px }
-.hero p { opacity:.8 }
 
-.hero button {
-  margin-top: 12px;
-  background:#00ff9c;
-  border:none;
-  padding:12px 26px;
-  border-radius:30px;
-  font-weight:bold;
+@keyframes ticker{
+from{transform:translateX(0)}
+to{transform:translateX(-100%)}
+}
+
+/* HERO CARD */
+.hero{
+margin:16px;
+margin-top:20px;
+border-radius:20px;
+overflow:hidden;
+background:linear-gradient(to bottom,rgba(0,0,0,.3),rgba(0,0,0,.8)),
+url('hero-paris-desktop.jpg') center/cover no-repeat;
+min-height:260px;
+display:flex;
+flex-direction:column;
+justify-content:flex-end;
+padding:18px;
+}
+
+.hero h1{font-size:30px}
+.hero p{opacity:.8;margin-top:4px}
+
+.hero button{
+margin-top:14px;
+width:100%;
+padding:14px;
+border-radius:30px;
+border:none;
+background:#00ff9c;
+color:#000;
+font-weight:700;
 }
 
 /* SEARCH */
-.search {
-  display:flex;
-  padding: 20px;
-  gap:10px;
-}
-.search input {
-  flex:1;
-  padding:14px;
-  border-radius:12px;
-  border:none;
-}
-.search button {
-  background:#00ff9c;
-  border:none;
-  padding:14px 20px;
-  border-radius:12px;
+.search{
+margin:16px;
+display:flex;
+gap:10px;
 }
 
-/* CARDS */
-.cards {
-  display:grid;
-  grid-template-columns: 1fr 1fr;
-  gap:16px;
-  padding:20px;
+.search input{
+flex:1;
+padding:14px;
+border-radius:14px;
+border:none;
 }
-.card {
-  background: rgba(0,0,0,.45);
-  border-radius:16px;
-  padding:20px;
-  border:1px solid #00ff9c33;
-}
-.card h3 { margin-bottom:6px; color:#00ff9c }
 
-footer {
-  text-align:center;
-  font-size:12px;
-  opacity:.6;
-  padding:20px;
+.search button{
+padding:14px 18px;
+border-radius:14px;
+border:none;
+background:#00ff9c;
+}
+
+/* MODULES */
+.modules{
+display:grid;
+grid-template-columns:1fr 1fr;
+gap:14px;
+padding:16px;
+}
+
+.module{
+background:#071f18;
+border-radius:18px;
+padding:18px;
+border:1px solid #00ff9c22;
+}
+
+.module h3{color:#00ff9c;margin-bottom:6px}
+.module p{opacity:.75;font-size:14px}
+
+/* FOOTER INFO */
+footer{
+padding:16px;
+font-size:11px;
+opacity:.5;
+text-align:center;
 }
 </style>
 </head>
@@ -129,39 +162,35 @@ footer {
 <div id="intro"><h1>TBW AI PREMIUM</h1></div>
 
 <header>
-  <strong>TBW AI <span>PREMIUM</span></strong>
-  <span>LIVE ● GPS OK</span>
+<div>TBW AI <span>PREMIUM</span></div>
+<div>LIVE ● GPS OK</div>
 </header>
 
 <div id="ticker">
-  <div>LIVE • Traffic • Weather • Safety • Events • Airports • TBW AI Engine active</div>
+<div>LIVE • Traffic • Weather • Safety • Events • Airports • TBW AI Engine active</div>
 </div>
 
 <section class="hero">
-  <h1>Paris</h1>
-  <p>Eiffel Tower · Champ de Mars</p>
-  <button>NAVIGATE</button>
+<h1>Paris</h1>
+<p>Eiffel Tower · Champ de Mars</p>
+<button>NAVIGATE</button>
 </section>
 
 <div class="search">
-  <input placeholder="Ask TBW AI..." />
-  <button>GO</button>
+<input placeholder="Ask TBW AI…">
+<button>GO</button>
 </div>
 
-<section class="cards">
-  <div class="card"><h3>Navigation</h3><p>AI guided routing</p></div>
-  <div class="card"><h3>Booking</h3><p>Hotels · Apartments</p></div>
-  <div class="card"><h3>Weather</h3><p>Live conditions</p></div>
-  <div class="card"><h3>Traffic</h3><p>Incidents & alerts</p></div>
+<section class="modules">
+<div class="module"><h3>Navigation</h3><p>AI guided routing</p></div>
+<div class="module"><h3>Booking</h3><p>Hotels · Apartments</p></div>
+<div class="module"><h3>Weather</h3><p>Live conditions</p></div>
+<div class="module"><h3>Traffic</h3><p>Incidents & alerts</p></div>
 </section>
 
 <footer>
 TBW AI PREMIUM NAVIGATOR · Informational tool only
 </footer>
-
-<script>
-setTimeout(()=>document.getElementById("intro").remove(),3000);
-</script>
 
 </body>
 </html>
